samples/_failures_safe/1760884712_29900c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1253f59.c: In function ‘read_identifier’:
./samples/SAFE/__tmp_f1253f59.c:90:33: error: expected ‘)’ before ‘{’ token
   90 |     while (isalnum(peek(lexer)) {
      |           ~                     ^
./samples/SAFE/__tmp_f1253f59.c:99:1: error: expected expression before ‘}’ token
   99 | }
      | ^
./samples/SAFE/__tmp_f1253f59.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f1253f59.c:157:46: error: missing terminating ' character
  157 |             char punct[2] = {advance(lexer), '\
      |                                              ^~
./samples/SAFE/__tmp_f1253f59.c:157:13: error: expected expression at end of input
  157 |             char punct[2] = {advance(lexer), '\
      |             ^~~~
./samples/SAFE/__tmp_f1253f59.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1253f59.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1253f59.c:157:13: error: expected declaration or statement at end of input
